# revet

./: .gitignore  .revet.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yml
.github/: secret_scanning.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
analyzers/: __init__.py  base.py  setup.py
analyzers/ml_pipeline/: __init__.py  data_leakage.py  train_serve_skew.py
analyzers/security/: __init__.py  secret_exposure.py  sql_injection.py
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  progress.rs  run_log.rs
crates/cli/src/ai/: client.rs  mod.rs
crates/cli/src/commands/: auth.rs  baseline.rs  config_check.rs  diff.rs  explain.rs  init.rs  log.rs  mod.rs  report.rs  review.rs  stats.rs  watch.rs
crates/cli/src/license/: cache.rs  client.rs  gate.rs  machine.rs  mod.rs  types.rs
crates/cli/src/output/: github.rs  github_comment.rs  json.rs  mod.rs  sarif.rs  terminal.rs
crates/cli/tests/: test_explain.rs  test_github.rs  test_license_cache.rs  test_license_client.rs  test_license_gate.rs  test_license_machine.rs  test_license_types.rs  test_sarif.rs
crates/core/: Cargo.toml
crates/core/src/: baseline.rs  cache.rs  config.rs  discovery.rs  finding.rs  fixer.rs  lib.rs  suppress.rs
crates/core/src/analyzer/: async_patterns.rs  circular_imports.rs  command_injection.rs  complexity.rs  custom_rules.rs  dead_imports.rs  dependency.rs  duplication.rs  error_handling.rs  hardcoded_endpoints.rs  infra.rs  insecure_deserialization.rs  magic_numbers.rs  ml_pipeline.rs  mod.rs  path_traversal.rs  react_hooks.rs  secret_exposure.rs  sensitive_logging.rs  sql_injection.rs  ssrf.rs  test_coverage.rs  toolchain.rs  unused_exports.rs
crates/core/src/diff/: blast_radius.rs  blob.rs  impact.rs  mod.rs
crates/core/src/graph/: edges.rs  mod.rs  nodes.rs  query.rs
crates/core/src/parser/: c.rs  csharp.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  resolver.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
crates/core/src/store/: cozo.rs  memory.rs  mod.rs
crates/core/tests/: bench_parallel.rs  test_async_patterns_analyzer.rs  test_baseline.rs  test_blob_reader.rs  test_c_parser.rs  test_cache.rs  test_command_injection_analyzer.rs  test_complexity_analyzer.rs  test_config.rs  test_cross_file_resolution.rs  test_csharp_parser.rs  test_custom_rules_analyzer.rs  test_dead_imports_analyzer.rs  test_dependency_analyzer.rs  test_diff_filter.rs  test_discovery.rs  test_dogfood.rs  test_error_handling_analyzer.rs  test_finding.rs  test_fixer.rs  test_go_parser.rs  test_graph.rs  test_graph_analyzers.rs  test_hardcoded_endpoints_analyzer.rs  test_impact.rs  test_infra_analyzer.rs  test_insecure_deserialization_analyzer.rs  test_java_parser.rs  test_kotlin_parser.rs  test_magic_numbers_analyzer.rs  test_ml_analyzer.rs  test_parallel_parse.rs  test_parser.rs  test_path_traversal_analyzer.rs  test_php_parser.rs  test_python_parser.rs  test_react_hooks_analyzer.rs  test_ruby_parser.rs  test_rust_parser.rs  test_secret_analyzer.rs  (+9 more)
crates/node-binding/: Cargo.toml  index.d.ts  index.js  package.json
crates/node-binding/darwin-arm64/: package.json
crates/node-binding/darwin-x64/: package.json
crates/node-binding/linux-arm64-gnu/: package.json
crates/node-binding/linux-x64-gnu/: package.json
crates/node-binding/src/: lib.rs
crates/node-binding/win32-x64-msvc/: package.json
demo/python_flask_app/: auth.py
docs/: docusaurus.config.ts  sidebars.ts
docs/docs/: ai-reasoning.md  architecture.md  ci-cd.md  commands.md  configuration.md  contributing.md  getting-started.md  language-parsers.md  node-api.md  output-formats.md
docs/docs/analyzers/: async-patterns.md  custom-rules.md  dependency.md  error-handling.md  hardcoded-endpoints.md  infrastructure.md  ml-pipeline.md  overview.md  react-hooks.md  security.md  toolchain.md
docs/docs/commands/: baseline.md  config-check.md  diff.md  explain.md  init.md  log.md  overview.md  report.md  review.md  stats.md  watch.md
docs/src/pages/: index.module.css  index.tsx
npm/@revet/cli-darwin-arm64/: package.json
npm/@revet/cli-darwin-x64/: package.json
npm/@revet/cli-linux-arm64/: package.json
npm/@revet/cli-linux-x64/: package.json
npm/@revet/cli-win32-arm64/: package.json
npm/@revet/cli-win32-x64/: package.json
npm/revet/: install.js  package.json
scripts/: build-npm.sh
tests/fixtures/: README.md
tests/fixtures/ml_pipeline/: .revet.toml  README.md  model.py  preprocess.py  requirements.txt  train.py
tests/fixtures/python_flask_app/: app.py
tests/fixtures/terraform_project/: .revet.toml  Dockerfile  README.md  iam-policy.json  k8s-deployment.yaml  main.tf  variables.tf
tests/fixtures/typescript_express/: .revet.toml  README.md  package.json
tests/fixtures/typescript_express/src/: app.ts  config.ts
tests/fixtures/typescript_express/src/models/: Product.ts  User.ts
tests/fixtures/typescript_express/src/routes/: products.ts  users.ts
tests/fixtures/typescript_express/src/services/: database.ts
