[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/node-binding",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Umit Kavala <umitkavala@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/umitkavala/revet"

[workspace.dependencies]
# Core dependencies
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.6"
petgraph = { version = "0.6", features = ["serde-1"] }
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
glob = "0.3"
ignore = "0.4"
rayon = "1.10"
regex = "1"
clap = { version = "4", features = ["derive", "cargo"] }
colored = "2"
toml = "0.8"
anyhow = "1"
thiserror = "2"
indicatif = "0.17"
cozo-ce = { version = "0.7", default-features = false, features = ["minimal", "rayon", "requests"] }
notify = "6.1"
notify-debouncer-mini = "0.4"
ctrlc = "3.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "5"
sha2 = "0.10"
open = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
