[package]
name = "revet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code review agent with deterministic analysis and selective LLM reasoning"
keywords = ["code-review", "static-analysis", "linter", "cli", "tree-sitter"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "revet_cli"
path = "src/lib.rs"

[[bin]]
name = "revet"
path = "src/main.rs"

[dependencies]
revet-core = { path = "../core", version = "0.1.0", features = ["cozo-store"] }
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
indicatif.workspace = true
glob.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
ctrlc.workspace = true
thiserror.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
