[package]
name = "revet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core code intelligence graph engine for Revet"

[features]
default = []
cozo-store = ["cozo-ce"]

[dependencies]
cozo-ce = { workspace = true, optional = true }
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-java.workspace = true
petgraph.workspace = true
git2.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
ignore.workspace = true
rayon.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
