[package]
name = "revet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core code intelligence graph engine for Revet"
keywords = ["code-review", "static-analysis", "linter", "ast", "tree-sitter"]
categories = ["development-tools", "development-tools::testing"]

[features]
default = ["cozo-store"]
cozo-store = ["cozo-ce"]

[dependencies]
cozo-ce = { workspace = true, optional = true }
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
petgraph.workspace = true
git2.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
ignore.workspace = true
rayon.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
regex.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile = "3"
