[package]
name = "revet-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for Revet via NAPI-RS"

[lib]
crate-type = ["cdylib"]

[dependencies]
revet-core = { path = "../core" }
napi = { version = "2", features = ["async"] }
napi-derive = "2"
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
